commit to nexus

--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,13 @@
       </plugin>
     </plugins>
   </build>
-
+<distributionManagement>
+ <repository>
+ <id>deployment</id>
+ <name>Internal release1</name>
+ <url>http://10.0.2.15:8081/nexus/content/repositories/DEV/</url>
+</repository> 
+</distributionManagement>
   <reporting>
     <plugins>
       <plugin>
